--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 xamppDashboard.code-workspace
+.buildpath
+.project
+.settings/.jsdtscope
+.settings/org.eclipse.php.core.prefs
+.settings/org.eclipse.wst.common.project.facet.core.xml
+.settings/org.eclipse.wst.jsdt.ui.superType.container
+.settings/org.eclipse.wst.jsdt.ui.superType.name
+XAMPP-localhost-custom-dashboard (2).zip
+XAMPP-localhost-custom-dashboard-alphapack.7z
+*.7z
+XAMPP-localhost-custom-dashboard-alphapack.zip
+*.zip
